# iot-cdk-play

./: .gitignore  Cargo.toml  Dockerfile  README.md  Readme.md  cdk.json  docker-compose.yml  mosquitto.conf
cdk/: cdk.json  main.ts  package-lock.json  package.json
cdk/lambda/: api.ts  handler.ts  rules.ts
cdk/lib/: cdk-stack.ts
cdk/protos/: types.proto  types.ts
cdk/test/: cdk.test.ts
cdk/utils/: Environment.ts
monitoring-core/: Cargo.toml
monitoring-core/src/: lib.rs  main.rs  types.rs
monitoring-core/tests/: integration.rs
